<20기 전용민> Modifying: 영화 상세페이지 레이아웃 1차 리뷰 반영 완료

--- a/src/pages/MovieDetail/components/MovieDetailContentsSection/MovieDetailContentsSection.scss
+++ b/src/pages/MovieDetail/components/MovieDetailContentsSection/MovieDetailContentsSection.scss
@@ -77,20 +77,15 @@
     }
   }
 
-  .commentSubjectAndCount {
-    .commentComents header div:first-child {
-      display: flex;
-      flex-direction: row;
+  .commentContents header {
+    h2 {
+      font-size: 1.3125em;
+      font-weight: bold;
     }
-  }
 
-  .commentContents header h2 {
-    font-size: 1.3125em;
-    font-weight: bold;
-  }
-
-  .commentContents header div a {
-    color: #ff2f62;
+    div a {
+      color: #ff2f62;
+    }
   }
 
   .similarMovieContents header h2 {
